Architecture was updated + UpdateUser was implemented